Added multiple pages
- Linked multiple pages
TO DO:
- fix website layout for subpages
- add active animation on navbar

--- a/pages/references.html
+++ b/pages/references.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   
   <body>
@@ -18,10 +18,10 @@
 
       <nav>
         <ul class="nav__list">
-          <li><a href="index.html">home</a></li>
-          <li><a href="pages/risks.html">risks</a></li>
-          <li><a href="pages/solutions.html">solutions</a></li>
-          <li><a href="pages/references.html">references</a></li>
+          <li><a href="../index.html">home</a></li>
+          <li><a href="risks.html">risks</a></li>
+          <li><a href="solutions.html">solutions</a></li>
+          <li><a href="references.html">references</a></li>
         </ul>
       </nav>
     </header>
@@ -33,7 +33,7 @@
         <h1 class="section__title section__title--intro">
             <strong> Learn about the <br> Everywhere E-waste Problem</strong> 
         </h1>
-        <p class="section__subtitle section__subtitle--intro">E-waste or electronic waste includes anywhere from cooling and freezing equipment, screens and monitors, lamps, washing machines, and small IT and telecommunication equipment.</p>
+        <p class="section__subtitle section__subtitle--intro">The dangerous second nature of electronic devices towards the end of their “useful” life.</p>
 
         <!-- Split content into two paragraphs and display them side by side divided by a line -->
         
@@ -42,7 +42,7 @@
                 <p class="intro__description"> </p>
             </div> -->
             <div class="block-child-element block-child-element2 vertical">
-                <p class="intro__description"><em> <strong>Only 17.4% of e-waste is recycled.</strong> With an estimated "<strong>$57 billion worth</strong> of gold, silver, copper, platinum and other high-value, recoverable materials [...] burned rather than being collected for treatment and reuse”, releasing <strong>hazardous chemicals that cause illness.</strong></em></p>
+                <p class="intro__description"><em> "<strong>$57 billion worth</strong> of gold, silver, copper, platinum and other high-value, recoverable materials [...] is burned rather than being collected for treatment and reuse.” Meanwhile <strong>only 17.4% of e-waste is recycled.</strong></em></p>
             </div>
 
         </div>
