Updated stylings for solutions page and retouched references and links

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 <p class="intro__description"> </p>
             </div> -->
             <div class="block-child-element block-child-element2 vertical">
-                <p class="intro__description"><em> <strong>Only 17.4% of e-waste is recycled.</strong> With an estimated "<strong>$57 billion worth</strong> of gold, silver, copper, platinum and other high-value, recoverable materials [...] burned rather than being collected for treatment and reuse”, releasing <strong>hazardous chemicals that cause illness.</strong></em></p>
+                <p class="intro__description"><p class="intro__description"><em> “The world dumped a record  <strong>53.6 million tons of e-waste in 2019</strong> - equivalent to the weight of <strong>350 cruise ships the size of Queen Mary. </strong>” - the Global E-waste Monitor 2020</em></p>
             </div>
 
         </div>
 
 
         
-        <a href="#about"><button class="intro__button">Start Here</button></a>
+        <a href="pages/risks.html"><button class="intro__button">Explore Risks</button></a>
       </div>
       
     </section>
