--- a/pages/risks.html
+++ b/pages/risks.html
@@ -56,7 +56,7 @@
             <h2 class="section__subtitle">To the Environment</h2>
             <hr>
               <div>
-                <p id="environment-text">When e-waste is not recycled and burned or exposed to heat, toxic chemicals like dioxins are released into the air damaging the atmosphere. Poor management of e-waste can let it seep into groundwater impacting water quality and both land and sea animals. </p>
+                <p id="environment-text">When e-waste is burned or exposed to heat, toxic chemicals like dioxins are released into the air damaging the atmosphere. Poor management of e-waste can let it seep into groundwater impacting water quality and both land and sea animals. </p>
                 <br>
                 <br>
                 <br>
